letsCode. lesson 3 - spring security, base authorization and authentication

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -5,10 +5,16 @@
     <title>Home page</title>
 </head>
 <body>
+    <form action="/logout" method="post">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+        <input type="submit" value="Sign Out"/>
+    </form>
+
     <div>
         <form method="post">
             <input type="text" name="text" placeholder="Text">
             <input type="text" name="tag" placeholder="Tag">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
             <button type="submit">Add</button>
         </form>
     </div>
@@ -16,6 +22,7 @@
     <div>
         <form method="post" action="filter">
             <input type="text" name="filter" placeholder="Filter">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
             <button type="submit">Filter</button>
         </form>
     </div>
